refactor: use::decode_to_hex
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ std = []
 bitflags = "2.4.1"
 crc = "3.0.1"
 heapless = "0.8.0"
-hex = { git = "https://github.com/jarkkojs/rust-hex.git", branch="feat/decode-in-slice" }
+hex = "0.4.3"
 strum = { version = "0.25.0", features = ["derive"] }
 strum_macros = { version = "0.25.3", features = [] }
 tinyvec = "1.6.0"
