--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 authors = ["jarkkojs", "aarbuzov"]
 name = "zmodem2"
 description = "ZMODEM file transfer protocol"
-repository = "https://github.com/rust-lang/cargo/"
+repository = "https://gitlab.com/jarkkojs/zmodem2"
 license = "MIT OR Apache-2.0"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 rust-version = "1.73"
 
