--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["jarkkojs", "aarbuzov"]
 name = "zmodem2"
 description = "ZMODEM file transfer protocol"
-repository = "https://gitlab.com/jarkkojs/zmodem2"
+repository = "https://codeberg.org/jarkko/zmodem2.git"
 license = "MIT OR Apache-2.0"
 version = "0.1.1"
 edition = "2021"
