build: support `no_std` builds
A non-feature-gated dependency on the standard library snuck in
via a call into the `hex` crate, which caused `no_std` builds to
fail (e.g., `cargo build --no-default-features`).

The issue was calling `hex::encode`, which returns a `String`.
However, `hex` supports `no_std` builds, and the use case here
was easy to accommodate by calling a different function,
`hex::encode_to_slice`, from `hex` and modifying the `hex`
dependency in `Cargo.toml` to disable default features.

With this change, `no_std` builds work again.

Signed-off-by: Dan Cross <cross@gajendra.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ std = []
 bitflags = "2.4.1"
 crc = "3.0.1"
 heapless = "0.8.0"
-hex = "0.4.3"
+hex = { version = "0.4.3", default-features = false }
 strum = { version = "0.25.0", features = ["derive"] }
 strum_macros = { version = "0.25.3", features = [] }
 tinyvec = "1.6.0"
