--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ bitflags = "2.4.1"
 crc = "3.0.1"
 heapless = "0.8.0"
 hex = { version = "0.4.3", default-features = false }
-strum = { version = "0.25.0", features = ["derive"] }
-strum_macros = { version = "0.25.3", features = [] }
+strum = { version = "0.27", default-features=false, features = ["derive"] }
+strum_macros = { version = "0.27", default-features=false }
 tinyvec = "1.6.0"
 
 [dev-dependencies]
